commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesformatloadoptions.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       表示要在 format 对象上加载的属性。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesFormatLoadOptions
     fullName: Excel.CellPropertiesFormatLoadOptions
     langs:
@@ -30,7 +30,7 @@ items:
     summary: |-
       指定是否在`autoIndent`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoIndent
     fullName: autoIndent
     langs:
@@ -45,7 +45,7 @@ items:
     summary: |-
       指定是否在`borders`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -60,7 +60,7 @@ items:
     summary: |-
       指定是否在`fill`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -75,7 +75,7 @@ items:
     summary: |-
       指定是否在`font`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -90,7 +90,7 @@ items:
     summary: |-
       指定是否在`horizontalAlignment`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -105,7 +105,7 @@ items:
     summary: |-
       指定是否在`indentLevel`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: indentLevel
     fullName: indentLevel
     langs:
@@ -120,7 +120,7 @@ items:
     summary: |-
       指定是否在`protection`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -135,7 +135,7 @@ items:
     summary: |-
       指定是否在`readingOrder`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readingOrder
     fullName: readingOrder
     langs:
@@ -150,7 +150,7 @@ items:
     summary: |-
       指定是否在`shrinkToFit`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shrinkToFit
     fullName: shrinkToFit
     langs:
@@ -165,7 +165,7 @@ items:
     summary: |-
       指定是否在`textOrientation`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -180,7 +180,7 @@ items:
     summary: |-
       指定是否在`useStandardHeight`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -195,7 +195,7 @@ items:
     summary: |-
       指定是否在`useStandardWidth`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -210,7 +210,7 @@ items:
     summary: |-
       指定是否在`verticalAlignment`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -225,7 +225,7 @@ items:
     summary: |-
       指定是否在`wrapText`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
