--- a/docs/docs-ref-autogen/excel/excel.headerfootergroup.yml
+++ b/docs/docs-ref-autogen/excel/excel.headerfootergroup.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.HeaderFooterGroup
-    summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    isPreview: true
+    summary: '\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.HeaderFooterGroup
     fullName: Excel.HeaderFooterGroup
     langs:
@@ -28,7 +27,6 @@ items:
       - excel.Excel.HeaderFooterGroup.useSheetScale
   - uid: excel.Excel.HeaderFooterGroup.context
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    isPreview: true
     name: context
     fullName: context
     langs:
@@ -43,8 +41,7 @@ items:
     summary: |-
       常规页眉/页脚，除非指定偶数页/奇数页或首页，否则适用于所有页面，
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: defaultForAllPages
     fullName: defaultForAllPages
     langs:
@@ -59,8 +56,7 @@ items:
     summary: |-
       用于偶数页的页眉/页脚，需要为奇数页指定奇数页页眉/页脚。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: evenPages
     fullName: evenPages
     langs:
@@ -75,8 +71,7 @@ items:
     summary: |-
       首页的页眉/页脚，为所有其他页使用常规或偶数页/奇数页页眉/页脚。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstPage
     fullName: firstPage
     langs:
@@ -96,8 +91,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.HeaderFooterGroup`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.HeaderFooterGroup`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
-    isPreview: true
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.HeaderFooterGroup`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -116,7 +110,6 @@ items:
             - excel.Excel.Interfaces.HeaderFooterGroupLoadOptions
   - uid: excel.Excel.HeaderFooterGroup.load_1
     summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
-    isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -135,7 +128,6 @@ items:
             - 'string | string[]'
   - uid: excel.Excel.HeaderFooterGroup.load_2
     summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
-    isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -156,8 +148,7 @@ items:
     summary: |-
       用于奇数页的页眉/页脚，需要为偶数页指定偶数页页眉/页脚。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: oddPages
     fullName: oddPages
     langs:
@@ -174,7 +165,6 @@ items:
       此方法具有以下附加签名:
 
       `set(properties: Excel.HeaderFooterGroup): void`
-    isPreview: true
     name: 'set(properties, options)'
     fullName: 'set(properties, options)'
     langs:
@@ -197,7 +187,6 @@ items:
             - office.OfficeExtension.UpdateOptions
   - uid: excel.Excel.HeaderFooterGroup.set_1
     summary: 基于现有加载的对象同时设置该对象的多个属性。
-    isPreview: true
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -218,8 +207,7 @@ items:
     summary: |-
       获取或设置所设置的页眉/页脚的状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: state
     fullName: state
     langs:
@@ -232,7 +220,6 @@ items:
           - Excel.HeaderFooterState | "Default" | "FirstAndDefault" | "OddAndEven" | "FirstOddAndEven"
   - uid: excel.Excel.HeaderFooterGroup.toJSON
     summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooterGroup 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.HeaderFooterGroupData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
-    isPreview: true
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -248,8 +235,7 @@ items:
     summary: |-
       获取或设置一个标记，指示页眉/页脚是否与工作表的页面布局选项中设置的页边距对齐。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useSheetMargins
     fullName: useSheetMargins
     langs:
@@ -264,8 +250,7 @@ items:
     summary: |-
       获取或设置一个标记，指示是否应按照工作表的页面布局选项中设置的页面缩放百分比来缩放页眉/页脚。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useSheetScale
     fullName: useSheetScale
     langs:
