--- a/docs/docs-ref-autogen/excel/excel.image.yml
+++ b/docs/docs-ref-autogen/excel/excel.image.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.Image
     summary: |-
-      代表工作表中的图像。 若要获取相应的 Shape 对象, 请使用 Image. Shape。
+      代表工作表中的图像。 若要获取相应的 Shape 对象, 请使用 Image。 Shape。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Image
     fullName: Excel.Image
     langs:
@@ -25,7 +24,6 @@ items:
       - excel.Excel.Image.toJSON
   - uid: excel.Excel.Image.context
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    isPreview: true
     name: context
     fullName: context
     langs:
@@ -40,8 +38,7 @@ items:
     summary: |-
       返回图像的格式。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -72,8 +69,7 @@ items:
     summary: |-
       表示图像对象的形状标识符。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -93,8 +89,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.Image`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Image`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
-    isPreview: true
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.Image`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -113,7 +108,6 @@ items:
             - excel.Excel.Interfaces.ImageLoadOptions
   - uid: excel.Excel.Image.load_1
     summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
-    isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -132,7 +126,6 @@ items:
             - 'string | string[]'
   - uid: excel.Excel.Image.load_2
     summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
-    isPreview: true
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -153,8 +146,7 @@ items:
     summary: |-
       返回与图像关联的形状对象。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shape
     fullName: shape
     langs:
@@ -167,7 +159,6 @@ items:
           - excel.Excel.Shape
   - uid: excel.Excel.Image.toJSON
     summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 图像对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ImageData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
-    isPreview: true
     name: toJSON()
     fullName: toJSON()
     langs:
