--- a/docs/docs-ref-autogen/excel/excel.interfaces.applicationdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.applicationdata.yml
@@ -15,10 +15,9 @@ items:
       - excel.Excel.Interfaces.ApplicationData.iterativeCalculation
   - uid: excel.Excel.Interfaces.ApplicationData.calculationEngineVersion
     summary: |-
-      返回有关工作簿最近一次完全重新计算所使用的 Excel 计算引擎的版本号。 只读。
+      返回用于上次完全重新计算的 Excel 计算引擎版本。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
     fullName: calculationEngineVersion
     langs:
@@ -46,10 +45,9 @@ items:
           - Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual"
   - uid: excel.Excel.Interfaces.ApplicationData.calculationState
     summary: |-
-      返回用于指示应用程序的计算状态的 CalculationState。 有关详细信息，请参阅 Excel.CalculationState。 只读。
+      返回应用程序的计算状态。 有关详细信息，请参阅 Excel.CalculationState。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationState
     fullName: calculationState
     langs:
@@ -62,10 +60,9 @@ items:
           - Excel.CalculationState | "Done" | "Calculating" | "Pending"
   - uid: excel.Excel.Interfaces.ApplicationData.iterativeCalculation
     summary: |-
-      返回“迭代计算”设置。 在 excel for Windows 和 excel for Mac 上, 这些设置将应用于 excel 应用程序。 在 excel Online 和 excel 中, 对于其他平台, 这些设置将应用于活动工作簿。
+      返回“迭代计算”设置。 在 Excel for Windows 和 Excel for Mac 上, 这些设置将应用于 Excel 应用程序。 在 Excel Online 和 Excel 中, 对于其他平台, 这些设置将应用于活动工作簿。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: iterativeCalculation
     fullName: iterativeCalculation
     langs:
