--- a/docs/docs-ref-autogen/excel/excel.shapecollection.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapecollection.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       代表工作表中所有形状的集合。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeCollection
     fullName: Excel.ShapeCollection
     langs:
@@ -36,8 +35,7 @@ items:
     summary: |-
       将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGeometricShape(geometricShapeType)
     fullName: addGeometricShape(geometricShapeType)
     langs:
@@ -73,8 +71,7 @@ items:
     summary: |-
       将几何形状添加到工作表。 返回一个 Shape 对象，该对象代表新图形。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGeometricShape(geometricShapeTypeString)
     fullName: addGeometricShape(geometricShapeTypeString)
     langs:
@@ -95,8 +92,7 @@ items:
     summary: |-
       在此集合的工作表中对形状的子集进行分组。 返回表示新形状组的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addGroup(values)
     fullName: addGroup(values)
     langs:
@@ -135,8 +131,7 @@ items:
     summary: |-
       从 base64 编码的字符串创建图像并将其添加到工作表。 返回表示新图片的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addImage(base64ImageString)
     fullName: addImage(base64ImageString)
     langs:
@@ -179,8 +174,7 @@ items:
     summary: |-
       将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'addLine(startLeft, startTop, endLeft, endTop, connectorType)'
     fullName: 'addLine(startLeft, startTop, endLeft, endTop, connectorType)'
     langs:
@@ -229,8 +223,7 @@ items:
     summary: |-
       将线条添加到工作表。 返回表示新线条的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: 'addLine(startLeft, startTop, endLeft, endTop, connectorTypeString)'
     fullName: 'addLine(startLeft, startTop, endLeft, endTop, connectorTypeString)'
     langs:
@@ -267,7 +260,7 @@ items:
     summary: |-
       从 XML 字符串创建可缩放的矢量图形 (SVG) 并将其添加到工作表。 返回表示新图片的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集: EXCELAPI BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
     name: addSvg(xml)
     fullName: addSvg(xml)
@@ -289,8 +282,7 @@ items:
     summary: |-
       使用提供的文本作为内容，将文本框添加到工作表。 返回表示新文本框的 Shape 对象。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addTextBox(text)
     fullName: addTextBox(text)
     langs:
@@ -325,7 +317,6 @@ items:
             - string
   - uid: excel.Excel.ShapeCollection.context
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    isPreview: true
     name: context
     fullName: context
     langs:
@@ -340,8 +331,7 @@ items:
     summary: |-
       返回工作表中的形状数。 只读。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -355,32 +345,30 @@ items:
         description: ''
   - uid: excel.Excel.ShapeCollection.getItem
     summary: |-
-      按名称获取形状。
+      使用其名称或 ID 获取形状。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
-    name: getItem(name)
-    fullName: getItem(name)
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: getItem(key)
+    fullName: getItem(key)
     langs:
       - typeScript
     type: method
     syntax:
-      content: 'getItem(name: string): Excel.Shape;'
+      content: 'getItem(key: string): Excel.Shape;'
       return:
         type:
           - excel.Excel.Shape
         description: ''
       parameters:
-        - id: name
-          description: 要检索的形状的名称。
+        - id: key
+          description: 要检索的形状的名称或 ID。
           type:
             - string
   - uid: excel.Excel.ShapeCollection.getItemAt
     summary: |-
       使用其在集合中的位置获取形状。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -399,7 +387,6 @@ items:
             - number
   - uid: excel.Excel.ShapeCollection.items
     summary: 获取此集合中已加载的子项。
-    isPreview: true
     name: items
     fullName: items
     langs:
@@ -419,8 +406,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Excel.ShapeCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
-    isPreview: true
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ShapeCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -439,7 +425,6 @@ items:
             - Excel.Interfaces.ShapeCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
   - uid: excel.Excel.ShapeCollection.load_1
     summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
-    isPreview: true
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -457,7 +442,6 @@ items:
           type:
             - 'string | string[]'
   - uid: excel.Excel.ShapeCollection.load_2
-    isPreview: true
     name: load(option)
     fullName: load(option)
     langs:
@@ -476,7 +460,6 @@ items:
             - office.OfficeExtension.LoadOption
   - uid: excel.Excel.ShapeCollection.toJSON
     summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.ShapeCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ShapeCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
-    isPreview: true
     name: toJSON()
     fullName: toJSON()
     langs:
