--- a/docs/docs-ref-autogen/word/word.range.yml
+++ b/docs/docs-ref-autogen/word/word.range.yml
@@ -665,7 +665,7 @@ items:
               myContentControl.tag = "Customer-Address";
               myContentControl.title = "Enter Customer Address Here:";
               myContentControl.style = "Normal";
-              myContentControl.insertText("One Microsoft Way, Redmond, WA 98052", 'replace');
+              myContentControl.insertText("One Microsoft Way, Redmond, WA 98052", 'Replace');
               myContentControl.cannotEdit = true;
 
               // Synchronize the document state by executing the queued commands,
@@ -704,7 +704,7 @@ items:
           ```
   - uid: word.Word.Range.insertFileFromBase64
     summary: |-
-      在指定位置插入 document。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 document。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertFileFromBase64(base64File, insertLocation)'
@@ -749,7 +749,7 @@ items:
           ```
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocation
@@ -758,7 +758,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.Range.insertFileFromBase64_1
     summary: |-
-      在指定位置插入 document。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 document。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertFileFromBase64(base64File, insertLocationString)'
@@ -774,7 +774,7 @@ items:
         description: ''
       parameters:
         - id: base64File
-          description: 必需。 .docx 文件的 base64 编码内容。
+          description: 必需。 .Docx 文件的 base64 编码内容。
           type:
             - string
         - id: insertLocationString
@@ -783,7 +783,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.Range.insertHtml
     summary: |-
-      在指定位置插入 HTML。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 HTML。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertHtml(html, insertLocation)'
@@ -836,7 +836,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.Range.insertHtml_1
     summary: |-
-      在指定位置插入 HTML。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 HTML。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertHtml(html, insertLocationString)'
@@ -861,7 +861,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.Range.insertInlinePictureFromBase64
     summary: |-
-      在指定位置插入图片。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入图片。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertInlinePictureFromBase64(base64EncodedImage, insertLocation)'
@@ -886,7 +886,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.Range.insertInlinePictureFromBase64_1
     summary: |-
-      在指定位置插入图片。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入图片。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.2](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertInlinePictureFromBase64(base64EncodedImage, insertLocationString)'
@@ -911,7 +911,7 @@ items:
             - '"Before" | "After" | "Start" | "End" | "Replace"'
   - uid: word.Word.Range.insertOoxml
     summary: |-
-      在指定位置插入 OOXML。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 OOXML。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertOoxml(ooxml, insertLocation)'
@@ -967,7 +967,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.Range.insertOoxml_1
     summary: |-
-      在指定位置插入 OOXML。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入 OOXML。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertOoxml(ooxml, insertLocationString)'
@@ -1136,7 +1136,7 @@ items:
             - 'string[][]'
   - uid: word.Word.Range.insertText
     summary: |-
-      在指定位置插入文本。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入文本。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertText(text, insertLocation)'
@@ -1189,7 +1189,7 @@ items:
             - Word.InsertLocation
   - uid: word.Word.Range.insertText_1
     summary: |-
-      在指定位置插入文本。 insertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
+      在指定位置插入文本。 InsertLocation 值可以是 "Replace"、"Start"、"End"、"Before" 或 "After"。
 
       \[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: 'insertText(text, insertLocationString)'
@@ -1293,7 +1293,7 @@ items:
 
       `load(option?: { select?: string; expand?: string; }): Word.Range`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Range`-仅适用于集合类型。 它类似于前面的签名。 top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.Range`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
