--- a/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
+++ b/docs/docs-ref-autogen/excel/excel.arrowheadwidth.yml
@@ -1,8 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.ArrowheadWidth
-    summary: '\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    isPreview: true
+    summary: '\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.ArrowheadWidth
     fullName: Excel.ArrowheadWidth
     langs:
@@ -14,7 +13,6 @@ items:
       - excel.Excel.ArrowheadWidth.narrow
       - excel.Excel.ArrowheadWidth.wide
   - uid: excel.Excel.ArrowheadWidth.medium
-    isPreview: true
     name: medium
     fullName: medium
     langs:
@@ -22,7 +20,6 @@ items:
     type: field
     numericValue: '"Medium"'
   - uid: excel.Excel.ArrowheadWidth.narrow
-    isPreview: true
     name: narrow
     fullName: narrow
     langs:
@@ -30,7 +27,6 @@ items:
     type: field
     numericValue: '"Narrow"'
   - uid: excel.Excel.ArrowheadWidth.wide
-    isPreview: true
     name: wide
     fullName: wide
     langs:
