--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesfillloadoptions.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       指定要在`format.fill`对象上加载的属性。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesFillLoadOptions
     fullName: Excel.CellPropertiesFillLoadOptions
     langs:
@@ -22,8 +21,7 @@ items:
     summary: |-
       指定是否在`color`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -38,8 +36,7 @@ items:
     summary: |-
       指定是否在`pattern`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pattern
     fullName: pattern
     langs:
@@ -54,8 +51,7 @@ items:
     summary: |-
       指定是否在`patternColor`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternColor
     fullName: patternColor
     langs:
@@ -70,8 +66,7 @@ items:
     summary: |-
       指定是否在`patternTintAndShade`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: patternTintAndShade
     fullName: patternTintAndShade
     langs:
@@ -86,8 +81,7 @@ items:
     summary: |-
       指定是否在`tintAndShade`属性上进行加载。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
