--- a/docs/docs-ref-autogen/excel/excel.cellpropertiesprotection.yml
+++ b/docs/docs-ref-autogen/excel/excel.cellpropertiesprotection.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       表示的`format.protection`属性`getCellProperties`<!-- -->, `getRowProperties`<!-- -->, 和`getColumnProperties`或的`format.protection`输入参数`setCellProperties`<!-- -->, `setRowProperties`<!-- -->, 并`setColumnProperties`<!-- -->.
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.CellPropertiesProtection
     fullName: Excel.CellPropertiesProtection
     langs:
@@ -19,8 +18,7 @@ items:
     summary: |-
       表示`format.protection.formulaHidden`属性。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formulaHidden
     fullName: formulaHidden
     langs:
@@ -35,8 +33,7 @@ items:
     summary: |-
       表示`format.protection.locked`属性。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: locked
     fullName: locked
     langs:
