--- a/docs/docs-ref-autogen/excel/excel.changedeventdetail.yml
+++ b/docs/docs-ref-autogen/excel/excel.changedeventdetail.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       提供有关 WorksheetChangedEvent/TableChangedEvent 的详细信息
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChangedEventDetail
     fullName: Excel.ChangedEventDetail
     langs:
@@ -21,8 +20,7 @@ items:
     summary: |-
       表示更改之后的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueAfter
     fullName: valueAfter
     langs:
@@ -37,8 +35,7 @@ items:
     summary: |-
       表示更改之前的值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueBefore
     fullName: valueBefore
     langs:
@@ -53,8 +50,7 @@ items:
     summary: |-
       表示更改之后的值类型。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypeAfter
     fullName: valueTypeAfter
     langs:
@@ -69,8 +65,7 @@ items:
     summary: |-
       表示更改之前的值类型。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypeBefore
     fullName: valueTypeBefore
     langs:
