--- a/docs/docs-ref-autogen/excel/excel.chartparentlabelstrategy.yml
+++ b/docs/docs-ref-autogen/excel/excel.chartparentlabelstrategy.yml
@@ -2,10 +2,9 @@
 items:
   - uid: excel.Excel.ChartParentLabelStrategy
     summary: |-
-      代表图表系列布局的父标签策略类型, 仅适用于树状图图表。
+      表示图表系列布局的父标签策略。 这仅适用于树状图图表
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartParentLabelStrategy
     fullName: Excel.ChartParentLabelStrategy
     langs:
@@ -17,7 +16,6 @@ items:
       - excel.Excel.ChartParentLabelStrategy.none
       - excel.Excel.ChartParentLabelStrategy.overlapping
   - uid: excel.Excel.ChartParentLabelStrategy.banner
-    isPreview: true
     name: banner
     fullName: banner
     langs:
@@ -25,7 +23,6 @@ items:
     type: field
     numericValue: '"Banner"'
   - uid: excel.Excel.ChartParentLabelStrategy.none
-    isPreview: true
     name: none
     fullName: none
     langs:
@@ -33,7 +30,6 @@ items:
     type: field
     numericValue: '"None"'
   - uid: excel.Excel.ChartParentLabelStrategy.overlapping
-    isPreview: true
     name: overlapping
     fullName: overlapping
     langs:
