--- a/docs/docs-ref-autogen/excel/excel.interfaces.applicationupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.applicationupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: excel.Excel.Interfaces.ApplicationUpdateData
-    summary: '用于更新 application 对象上的数据的接口, 可用于 "application. set (<!-- -->{ ... }<!-- -->)".'
+    summary: '用于更新 Application 对象上的数据的接口, 可用于 "application。 set (<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.ApplicationUpdateData
     fullName: Excel.Interfaces.ApplicationUpdateData
     langs:
@@ -28,10 +28,9 @@ items:
           - Excel.CalculationMode | "Automatic" | "AutomaticExceptTables" | "Manual"
   - uid: excel.Excel.Interfaces.ApplicationUpdateData.iterativeCalculation
     summary: |-
-      返回“迭代计算”设置。 在 excel for Windows 和 excel for Mac 上, 这些设置将应用于 excel 应用程序。 在 excel Online 和 excel 中, 对于其他平台, 这些设置将应用于活动工作簿。
+      返回“迭代计算”设置。 在 Excel for Windows 和 Excel for Mac 上, 这些设置将应用于 Excel 应用程序。 在 Excel Online 和 Excel 中, 对于其他平台, 这些设置将应用于活动工作簿。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: iterativeCalculation
     fullName: iterativeCalculation
     langs:
