--- a/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel/excel.shapelinestyle.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       线条的样式。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeLineStyle
     fullName: Excel.ShapeLineStyle
     langs:
@@ -20,7 +19,6 @@ items:
       - excel.Excel.ShapeLineStyle.thinThin
   - uid: excel.Excel.ShapeLineStyle.single
     summary: 单线。
-    isPreview: true
     name: single
     fullName: single
     langs:
@@ -29,7 +27,6 @@ items:
     numericValue: '"Single"'
   - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
     summary: 粗线每一侧各带一条细线。
-    isPreview: true
     name: thickBetweenThin
     fullName: thickBetweenThin
     langs:
@@ -38,7 +35,6 @@ items:
     numericValue: '"ThickBetweenThin"'
   - uid: excel.Excel.ShapeLineStyle.thickThin
     summary: '粗线位于细线旁边。 对于水平线, 粗线位于细线上方。 对于垂直线, 粗线位于细线的左侧。'
-    isPreview: true
     name: thickThin
     fullName: thickThin
     langs:
@@ -47,7 +43,6 @@ items:
     numericValue: '"ThickThin"'
   - uid: excel.Excel.ShapeLineStyle.thinThick
     summary: '粗线位于细线旁边。 对于水平线, 粗线位于细线下方。 对于垂直线条, 粗线位于细线的右侧。'
-    isPreview: true
     name: thinThick
     fullName: thinThick
     langs:
@@ -56,7 +51,6 @@ items:
     numericValue: '"ThinThick"'
   - uid: excel.Excel.ShapeLineStyle.thinThin
     summary: 双细线。
-    isPreview: true
     name: thinThin
     fullName: thinThin
     langs:
