--- a/docs/docs-ref-autogen/excel/excel.tableaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel.tableaddedeventargs.yml
@@ -4,8 +4,7 @@ items:
     summary: |-
       提供有关引发了 OnAdded 事件的表的信息。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TableAddedEventArgs
     fullName: Excel.TableAddedEventArgs
     langs:
@@ -21,8 +20,7 @@ items:
     summary: |-
       获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
@@ -37,8 +35,7 @@ items:
     summary: |-
       获取已添加的表格的 ID。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tableId
     fullName: tableId
     langs:
@@ -53,8 +50,7 @@ items:
     summary: |-
       获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -69,8 +65,7 @@ items:
     summary: |-
       获取已在其中添加表格的工作表的 ID。
 
-      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
