--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.removeduplicatesresultdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.removeduplicatesresultdata.yml
@@ -8,3 +8,36 @@ items:
       - typeScript
     type: interface
     package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.RemoveDuplicatesResultData.removed
+      - excel_release.Excel.Interfaces.RemoveDuplicatesResultData.uniqueRemaining
+  - uid: excel_release.Excel.Interfaces.RemoveDuplicatesResultData.removed
+    summary: |-
+      由操作删除的重复行数。
+
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: removed
+    fullName: removed
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'removed?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.RemoveDuplicatesResultData.uniqueRemaining
+    summary: |-
+      所生成的区域中存在的剩余唯一行数。
+
+      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: uniqueRemaining
+    fullName: uniqueRemaining
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'uniqueRemaining?: number;'
+      return:
+        type:
+          - number
